outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval1010445140063671515_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance measure that combines local distance, global connectivity, and a progress-adaptive penalty for less central nodes, while using a novel adaptive weight mechanism that balances exploration and exploitation based on both progress and node centrality.}
                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance measure that combines local distance, global connectivity, and a progress-adaptive penalty for less central nodes, while using a novel adaptive weight mechanism that balances exploration and exploitation based on both progress and node centrality.}
                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'
